# miaocr

./: .gitignore  Cargo.toml  PERMISSION_FIX.md  README.md  ocr_log.txt
.cargo/: config.toml
assets/: icon.icns
scripts/: create_icons.py  package.ps1  package.sh
src/: mac_ocr.swift  main.rs
