[package]
name = "miaocr"
version = "1.0.0"
edition = "2021"

[dependencies]
screenshots = "0.8"
image = "0.25"
anyhow = "1"
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust = "0.5"
chrono = "0.4"
ocr-rs = { path = "3rd_party/ocr-rs" }
oar-ocr = { path = "3rd_party/oar-ocr" }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Globalization",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
mouse_position = "0.1"